cabal-version:      2.4
name:               sgf-render
version:            0.1.0.0

-- Global GHC options (applied to all components)
common common-options
  ghc-options: -Wall -fno-warn-noncanonical-monad-instances


-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jim Snavely
maintainer:         ludflu@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library kifu
  exposed-modules:     Grid
  hs-source-dirs:      src
  build-depends:       base,
                      sgf==0.1.3.2,
                       diagrams-core,
                       diagrams-lib,
                       diagrams-contrib,



executable sgf-render
    main-is:          Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    --build-depends:   base ^>=4.16.4.0,
    other-modules:    SgfReader
    build-depends:    base,
                      sgf==0.1.3.2,
                      containers,
                      bytestring,
                      kifu,
                      diagrams-svg,
                      diagrams-rasterific,
                      diagrams-core,
                      diagrams-lib,
                      utf8-string


    hs-source-dirs:   app
    default-language: Haskell2010
