cabal-version:      2.4
name:               sgf-render
version:            0.1.0.0

-- Global GHC options (applied to all components)
common common-options
  ghc-options: -Wall -fno-warn-noncanonical-monad-instances


-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jim Snavely
maintainer:         ludflu@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library kifu
  exposed-modules:     Grid, SgfReader
  hs-source-dirs:      src
  build-depends:       base,
                       sgf==0.1.3.2,
                       diagrams-core,
                       diagrams-lib,
                       diagrams-contrib,
                       containers,                      
                       bytestring,
                       utf8-string




executable sgf-render
    main-is:          Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    --build-depends:   base ^>=4.16.4.0,
    build-depends:    base,
                      kifu,
                      sgf==0.1.3.2,
                      bytestring,
                      diagrams-svg,
                      diagrams-rasterific,
                      diagrams-core,
                      diagrams-lib,
    hs-source-dirs:   app
    default-language: Haskell2010
