cabal-version:      2.4
name:               sgf-render
version:            1.3
synopsis: a library for rendering SGF (Smart Game Format) files into kifu diagrams
description: 
  The sgf-render package reads SGF (Smart Game Format) files and renders them into a series of 
  kifu diagrams, suitable for game review. It support 19x19, 13x13, and 9x9 board sizes.
  The package is written in Haskell and uses the diagrams library for rendering.

bug-reports:        https://github.com/ludflu/sgfr-ender/issues
category:           Graphics
license-file:       LICENSE
author:             Jim Snavely <ludflu@gmail.com>
maintainer:         Jim Snavely <ludflu@gmail.com>
copyright:          (C) 2024 Jim Snavely. All rights reserved.


common common-options
  ghc-options: -Wall -fno-warn-noncanonical-monad-instances

library kifu
  exposed-modules:     Kifu, SgfReader, Goban
  hs-source-dirs:      src
  build-depends:       base,
                       sgf==0.1.3.2,
                       diagrams-core,
                       diagrams-lib,
                       diagrams-contrib,
                       diagrams-rasterific,
                       containers,                      
                       bytestring,
                       utf8-string,
                       mtl,




executable sgf-render
    main-is:          Main.hs
    other-modules:    RenderOpts
    build-depends:    base,
                      kifu,
                      sgf==0.1.3.2,
                      bytestring,
                      diagrams-rasterific,
                      diagrams-core,
                      diagrams-lib,
                      mtl,
                      containers,
                      optparse-applicative,
                      split

                      
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite sgf-tests
  type: exitcode-stdio-1.0
  other-modules: Goban
  hs-source-dirs:
      tests,
      app,
      src
  main-is: Tests.hs
  build-depends: base,
                 sgf==0.1.3.2,
                 diagrams-lib,
                 diagrams-contrib,
                 tasty,
                 tasty-hunit,
                 mtl,
                 containers,
                 utf8-string,
                 bytestring,
                 diagrams-rasterific,
                 optparse-applicative,
                 split
